workspace-sf/force-app/main/default/objects/ControleIntegracao__c/ControleIntegracao__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por conter os logs das integrações</description>
    <label>Controle de integração</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controles de integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>