workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/ChaveReferencia__c.field-meta.xml
<CustomField>
    <fullName>ChaveReferencia__c</fullName>
    <formula>IF(
			AND(CodigoIntegracao__c == &apos;82&apos;, OR(ISPICKVAL(Status__c, &apos;Erro&apos;), ISPICKVAL(Status__c, &apos;Processado&apos;))),
			MID(IdObjeto__c, 70, 2) + &apos;-&apos; + MID(IdObjeto__c, 72, 10),
   IF(
						AND(CodigoIntegracao__c == &apos;24&apos;, OR(ISPICKVAL(Status__c, &apos;Erro&apos;), ISPICKVAL(Status__c, &apos;Processado&apos;))),
					 MID(IdObjeto__c, 101, 11),
						&apos;&apos;
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chave referência</label>
    <type>Text</type>
</CustomField>