workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/CodigoIntegracao__c.field-meta.xml
<CustomField>
    <fullName>CodigoIntegracao__c</fullName>
    <label>Código da integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>