workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/DataCriacaoRegistro__c.field-meta.xml
<CustomField>
    <fullName>DataCriacaoRegistro__c</fullName>
    <label>Data de criação do registro</label>
    <type>Date</type>
</CustomField>