workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/IdObjeto__c.field-meta.xml
<CustomField>
    <fullName>IdObjeto__c</fullName>
    <label>Id do objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>