workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/Objeto_refer_ncia__c.field-meta.xml
<CustomField>
    <fullName>Objeto_refer_ncia__c</fullName>
    <formula>IF(CodigoIntegracao__c == &apos;82&apos;,
			HYPERLINK(&quot;https://portoseguro--sniper.lightning.force.com/&quot; + MID(IdObjeto__c, 0, 18), &quot;Contrato&quot;),
			IF(CodigoIntegracao__c == &apos;24&apos;,
			   HYPERLINK(&quot;https://portoseguro--sniper.lightning.force.com/&quot; + MID(IdObjeto__c, 0, 18), &quot;Fatura&quot;),
			   &apos;&apos;
					)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objeto referência</label>
    <type>Text</type>
</CustomField>