workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/Pagamento_Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_Sinistro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de Relacionamento entre os objetos Controle de Integração e Pagamento de Sinistro.</description>
    <label>Pagamento de Sinistro</label>
    <referenceTo>Pagamento_de_Sinistro__c</referenceTo>
    <relationshipLabel>Controles de integração</relationshipLabel>
    <relationshipName>Controles_de_integra_o</relationshipName>
    <type>Lookup</type>
</CustomField>