workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/Pasta_ECM__c.field-meta.xml
<CustomField>
    <fullName>Pasta_ECM__c</fullName>
    <label>Pasta ECM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>