workspace-sf/force-app/main/default/objects/ControleIntegracao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Em processamento</fullName>
            </value>
            <value>
                <fullName>Processado</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>