workspace-sf/force-app/main/default/objects/ControleIntegracao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoIntegracao__c</columns>
    <columns>IdObjeto__c</columns>
    <columns>DataCriacaoRegistro__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IdObjeto__c</field>
        <operation>startsWith</operation>
        <value>800DP000003o5A9YAI</value>
    </filters>
    <label>Todos os logs de integração</label>
</ListView>